option java_package = "ca.NetSysLab.ProtocolBuffers";
option java_outer_classname = "KeyValueRequest";

message KVRequest {
    required uint32 command = 1;
    optional bytes key = 2;
    optional bytes value = 3;
    optional int32 version = 4;

    optional string originAddress = 5;
    optional int32 originPort = 6;

    // node id of the node that sent this message
    optional int32 senderNodeId = 7;

    // node id of the node that this message is about i.e. dead node
    optional int32 nodeId = 8;
}